@@ -7,6 +7,8 @@ VERSION 3.2.82 UNRELEASED
    * Audio engine has been reworked to use gstreamer instead of phonon
 
   CHANGES:
+   * Apply default pre-gain when ReplayGain is active and use fallback value
+     if no ReplayGain data is available for a track
 
   BUGFIXES:
    * Partially re-enable cue file support
